--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Golang",
+            "name": "launch",
             "type": "go",
             "request": "launch",
             "remotePath": "",
@@ -13,8 +13,8 @@
             "host": "127.0.0.1",
             "program": "${fileDirname}",
             "env": {
-                "GOPATH":"/Users/dianjiu/GoProjects",
-                "GOROOT":"/usr/local/go",
+                "GOPATH":"C:/GoWork/go",
+                "GOROOT":"C:/Program Files/Go",
             },
             "args": []
         }
