--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,10 @@
             "type": "go",
             "request": "launch",
             "remotePath": "",
-            "port": 2021,
-            "host": "127.0.0.1",
             "program": "${fileDirname}",
             "env": {
-                "GOPATH":"C:/GoWork/go",
-                "GOROOT":"C:/Program Files/Go",
+                "GOPATH":"/Users/dianjiu/Codes/go",
+                "GOROOT":"/usr/local/go",
             },
             "args": []
         }
