并发查全部，回滚压缩算法

--- a/logc/conf/app.conf
+++ b/logc/conf/app.conf
@@ -4,7 +4,7 @@ runmode = dev
 # 开启JSON
 copyrequestbody = true
 # 临时目录
-temppath = c:/logs/
+temppath = /Users/dianjiu/Datas/temp/logc/
 # 服务端地址
 logs = 127.0.0.1:2021
 key = 123456
